--- a/Style.css
+++ b/Style.css
@@ -437,7 +437,15 @@ nav h3{
     position: fixed;
     z-index: 99;
     top:-100%;
-    transition: all ease 0.4s;
+    transition: all ease 0.6s;
+}
+
+#full-div1{
+    height: 50%;
+    width: 100%;
+    background-color: #EFEAE3;
+    border-bottom-left-radius:20px;
+    border-bottom-right-radius:20px;
 }
 
 @media (max-width:600px){
@@ -446,8 +454,10 @@ nav h3{
         width: 100vw;
         padding: 0 4vw;
     }
-    nav{
-        padding: 8vw 0vw;
+
+    nav {
+        padding: 8vw 5vw;
+        background-color: #EFEAE3;
        
     }
      
@@ -470,5 +480,198 @@ nav h3{
         font-size: 4vw;
         font-weight: 200;
         padding-left:10vw;
-    } 
+    }
+    #center{
+        height: 62vh;
+        width: 100%;
+       /* background-color:orange;*/
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        border-bottom: 1px solid #0000003c;
+        padding:6vw 5vw;
+        padding-bottom: 8vw;
+        flex-direction:column-reverse;
+        position: relative;
+        z-index: 9;
+    }
+    #left h3{
+        width:80%;
+        font-size: 5.8vw;
+        line-height:6vw;
+        
+    }
+    #center h1 {
+        font-size:15vw;
+        text-align:right;
+        line-height:12vw;
+    }
+    #page1 video {
+        position: relative;
+        border-radius:15px;
+        margin-top:5vw;
+        height:70vh;
+        object-fit:cover;
+        object-position: center;
+        width:92%;
+        margin-left:4%;
+    }
+    #page2{
+        min-height:100vh;
+        width:100%;
+        background-color:#EFEAE3;
+        padding: 6vw 0;
+        position: relative;
+    }
+    #moving-text{
+        overflow-x:auto;
+        white-space: nowrap;
+    }
+    #moving-text::-webkit-scrollbar{
+        display:none;
+    }
+    .con{
+        white-space:nowrap;
+        display: inline-block;
+        animation-name: move;
+        animation-duration:8s;
+        animation-timing-function:linear;
+        animation-iteration-count:infinite;
+    }
+    #moving-text h1{
+        font-size:15vw;
+       /* background-color: lightblue;*/
+        display: inline-block;
+    }
+    #circle{
+        height:25px;
+        width:25px;
+        border-radius:50%;
+        display: inline-block;
+        background-color: #FE320A;
+        margin: 2vw 2vw;
+    }
+    #page2-bottom{
+        height: 90vh;
+        width: 100%;
+      /*  background-color:aliceblue; */
+        padding:10vw  4vw;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        position: relative;
+        flex-direction:column;
+        z-index:9;
+    }
+
+    #page2-bottom h1{
+        font-size:9.5vw;
+        width:100%;
+        line-height: 10vw;
+    }
+    #bottom-part2{
+        width:70%;
+      /*  background-color: aqua; */
+    }
+    #bottom-part2 img{
+        width: 100%;
+        border-radius: 10px;
+    }
+    #bottom-part2 p {
+        font-weight: 200;
+        margin-top:1.5vw;
+        font-size: 3vw;
+    }
+    
+    #page2 #goal{
+        height:60vw;
+        width:60vw;
+        position: absolute;
+        border-radius:50%;
+        background: linear-gradient(to  top,#ff2d03,#ff671b);
+        top:58%;
+        left:26%;
+        filter: blur(20px);
+        animation:goal ;
+        animation-duration:6s;
+        animation-iteration-count: infinite;
+        animation-direction:alternate;
+        animation-timing-function: ease-in-out;
+    }
+
 }
+
+#loader{
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    position: fixed;
+    z-index: 999;
+    top:0;
+    transition: all ease 0.6s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+   #loader  .h1-one {
+    font-size: 4vw;
+    color:transparent;
+    background: linear-gradient(to right, orange,orangered);
+    -webkit-background-clip: text;
+    position: absolute;
+    opacity: 0;
+    animation-name: loader;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-timing-function: linear;
+}
+
+#loader  .h2-two {
+    font-size: 4vw;
+    color:transparent;
+    background: linear-gradient(to right, orange,orangered);
+    -webkit-background-clip: text; 
+    position: absolute;
+    opacity: 0;
+    animation-name: loader;
+    animation-duration: 1s;
+    animation-delay: 2s;
+    animation-timing-function: linear;
+}
+
+#loader  .h3-three {
+    font-size: 4vw;
+    color:transparent;
+    background: linear-gradient(to right, orange,orangered);
+    -webkit-background-clip: text; 
+    position: absolute;
+    opacity: 0;
+    animation-name: loader;
+    animation-duration: 1s;
+    animation-delay: 3s;
+    animation-timing-function: linear;
+}
+
+@keyframes loader {
+    0%{
+        opacity: 0;
+    }
+    10%{
+        opacity: 1;
+    }
+    90%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+    
+}
+
+@media (max-width:600px){
+    #loader h1{
+        font-size: 10vw;
+    }
+}
+
